# embeddings-api

./: .env  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml
src/embeddings-api/: application.py  config.py  router.py  vectorizer.py  vectotization_service.py
src/embeddings_api/: app.py  config.py  container.py  helpers.py  router.py  vectorizer.py
src/text2vec_api/: container.py  router.py
tests/: test_app.py
