[tool.poetry]
name = "text2vec-api"
version = "0.1.0"
description = ""
authors = ["moon"]
readme = "README.md"
packages = [{include = "text2vec_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
dependency-injector = "^4.41.0"
fastapi = "^0.111.0"
torch = "^2.3.0"
transformers = "^4.40.2"
optimum = "^1.19.1"
pydantic-settings = "^2.2.1"
onnxruntime = "^1.17.3"
onnx = "^1.16.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
jupyter = "^1.0.0"
pytest = "^8.2.0"
deptry = "^0.16.1"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
